2002-09-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/distdir.am: Add missing `;'.

	* lib/am/scripts.am (installcheck-%DIR%SCRIPTS): Account for
	Sun make rewriting rules in VPATH builds.  (Fixes gnits3.test.)
	* lib/am/progs.am (installcheck-%DIR%PROGRAMS): Likewise.

2002-09-04  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For automake/354:
	* lib/am/texibuild.am (%SOURCE_SUFFIX%.dvi, %SOURCE_SUFFIX%.pdf):
	Don't use `-o' unless necessary.

2002-08-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/343:
	* automake.in (scan_texinfo_file) <clean_suffixes>: Remove dvi, ps,
	and pdf.
	(output_texinfo_build_rules): Define %DIRSTAMP% when processing
	texibuild.am.  Return $dirstamp and a list of files to clean.
	(handle_texinfo_helper): Process texi-vers.am after the call to
	output_texinfo_build_rules and use $dirstamp to define %DIRSTAMP%.
	* lib/am/texi-vers.am (%STAMPVTI%): Build %DIRSTAMP% if needed.
	* lib/am/texibuild.am (%DEST_PREFIX%%DEST_SUFFIX%): Likewise.
	(%DEST_PREFIX%.dvi, %DEST_PREFIX%.pdf): Depend on %DIRSTAMP%.
	* tests/texinfo13.test: New file.
	* tests/Makefile.am (TESTS): Add texinfo13.test.
	* lib/am/texinfos.am (install-info-am, dist-info): Looks for
	info files in build or source directory.
	This completes the change from 2002-07-30 (for PR automake/168).

2002-08-24  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (CLEAN, MAINTAINER_CLEAN): New constants.
	(maintainer_clean_files): Replace by ...
	(clean_files): ... this new variable.
	(initialize_per_input, lang_yacc_target_hook,
	lang_lex_target_hook): Use %clean_files instead of
	@maintainer_clean_files.
	(handle_clean): Rewrite, using %clean_files.
	(require_build_directory_maybe): Use %clean_files instead
	of %compile_clean_files.  This allows using
	&require_build_directory_maybe for non-compiling targets.
	* lib/am/clean.am (mostlyclean-generic, clean-generic,
	distclean-generic, maintainer-clean-generic): Rewrite using