@@ -3,8 +3,6 @@
 # Check to make sure EXTRA_DIST can contain a directory or
 # a subdirectory, in $(builddir) or $(srcdir).
 
-# 'make distdir' + VPATH does not work with Solaris make.
-required=GNUmake
 . $srcdir/defs || exit 1
 
 set -e
