@@ -3,7 +3,7 @@
 # Test associated with PR 19.
 # From Matthew D. Langston.
 
-required='GNUmake gcc gzip'
+required='gcc gzip'
 . $srcdir/defs || exit 1
 
 # Ignore user CFLAGS.
