@@ -2,8 +2,7 @@
 
 # Test for PR automake/87.
 
-# Require GNU make for `make distcheck'
-required='GNUmake gcc'
+required=gcc
 . $srcdir/defs || exit 1
 
 subdirs="foo bar"
