@@ -2,8 +2,7 @@
 
 # Test for bug in PR 9.
 
-# `distcheck' requires GNU make.
-required='GNUmake gzip'
+required=gzip
 . $srcdir/defs || exit 1
 
 cat > configure.in << 'END'
