@@ -3,7 +3,7 @@
 # Test to make sure target specific CFLAGS work
 # Assar Westerlund <assar@sics.se>
 
-required='GNUmake gcc'
+required=gcc
 . $srcdir/defs || exit 1
 
 cat > configure.in << 'END'
