@@ -3,7 +3,7 @@
 # Check for subdir Texinfo.
 # PR/343
 
-required='GNUmake makeinfo'
+required='makeinfo'
 . $srcdir/defs || exit 1
 
 set -e
