@@ -2,7 +2,7 @@
 
 # Check that info files are built in $(srcdir).
 
-required='GNUmake makeinfo'
+required='makeinfo'
 . $srcdir/defs || exit 1
 
 set -e
