@@ -6,7 +6,6 @@
 # Also check that the sources of the generated parser are distributed.
 # PR/47.
 
-required=GNUmake
 . $srcdir/defs || exit 1
 
 cat >> configure.in << 'END'
