@@ -6,8 +6,7 @@
 # `make' and `make distdir' and check whether the version of `parse.c'
 # to be distributed is up to date.
 
-# Require GNU make for `make distdir'
-required='GNUmake gcc bison'
+required='gcc bison'
 . $srcdir/defs || exit 1
 
 cat > configure.in << 'END'
