@@ -1,6 +1,15 @@
 2002-09-05  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
-	* lib/am/distdir.am: Add missing `;'.
+	* lib/am/distdir.am (distcheck): Strip $(srcdir) prefix on
+	distributed files, to workaround Sun make VPATH munging.
+	This fixes subdircond2.test, subdircond3.test, and subpkg.test
+	on Solaris.
+	* tests/extra6.test, tests/lex3.test, tests/pr87.test,
+	tests/pr9.test, tests/target-cflags.test, tests/texinfo13.test,
+	tests/texinfo16.test, tests/yacc7.test, tests/yaccvpath.test:
+	Don't require GNU make.
+
+	* lib/am/distdir.am (distcheck): Add missing `;'.
 
 	* lib/am/scripts.am (installcheck-%DIR%SCRIPTS): Account for
 	Sun make rewriting rules in VPATH builds.  (Fixes gnits3.test.)
